# WRF-infra

./: .gitignore  AUTHORS  CONTRIBUTING.md  README.md  polar-options.md  pyproject.toml  requirements.yml
LICENSES/: CC-BY-SA-3.0
Registry/: Registry.EM_COMMON  Registry.EM_COMMON.var  registry.chem
chem/: aerosol_driver.F  chem_driver.F  chemics_init.F  cloudchem_driver.F  dry_dep_driver.F  emissions_driver.F  module_add_emiss_burn.F  module_aer_aqchem_simple.F  module_aer_drydep_simple.F  module_aer_wetscav_simple.F  module_bioemi_megan2.F  module_blowing_snow_emis.F  module_cmu_bulkaqchem.F  module_ctrans_grell.F  module_dep_simple.F  module_emissions_anthropogenics.F  module_ftuv_driver.F  module_ftuv_subs.F  module_gocart_chem.F  module_input_chem_data.F  module_mosaic_addemiss.F  module_mosaic_driver.F  module_mosaic_newnuc.F  module_mosaic_wetscav.F  module_optical_averaging.F  module_phot_fastj.F  module_plumerise1.F  module_seaspray_emis.F  module_wetscav_driver.F  optical_driver.F
compile/: README.md  commons.py  compile_WPS.py  compile_WRF.py  install_env.py  wrfinfra
data/: README.md  concat-cams-emissions-files.py  get-chlorophyll-data-from-copernicus-marine.py
doc/: README.irr_diag  wrfchem-repro-file-checklist.md
env/: README.md  jeanzay.config  jeanzay.sh  jed.config  jed.sh  spirit.config  spirit.sh
frame/: module_configure.F
phys/: module_bl_mynn.F  module_cu_gf_ctrans.F  module_microphysics_driver.F  module_mp_thompson.F  module_sf_clm.F
postprocess/: README.md  test.ipynb  wrfpp.py
run/: README.physics_files  commons.bash  header.txt  (+2 more)
(+51 files in other folders)
